--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,10 @@ body{
 }
 ul{
 	margin: auto;
-	height: 90vh;
+	height: 94vh;
 	padding-left: 0px;
 	max-width: 60%;
+	min-width: 183px;
 	border: thin solid black;
 	border-radius: 10px;
 	display: flex;
@@ -41,8 +42,17 @@ li{
 	line-height: 17vh;
 	color: white;
 }
+.fa-star{
+	line-height: 1rem;
+	color: black;
+	background: none;
+
+}
 .hidden{
 	background-color: #253d4b;
 	background-image: ['card-type'];
+}
+p,a {
+	font-size: 1rem;
 }
 
